# SSELoggerDemo

./: .gitignore  .secrets.toml  Dockerfile  Dockerfile_adv  README.md  consumer.py  docker-compose-backend.yml  docker-entrypoint.sh  exemplo_gerador.py  gerador_logs.py  index.html  pyproject.toml  referencias.css  referencias.html  settings.toml  style.css
app/: cpu_info.py  main.py
app/static/: realtime.js
client/: client.html  client_cpu_graph.html  client_cpu_log.html  client_cpu_realtime.html  client_listen_logs.html  client_listen_number.html  other_example.html
cliente_01/: docker-compose.yml
cliente_01/html/: index.html
cliente_02/: docker-compose.yml
cliente_02/html/: index.html
docs/: TIPS.md
